--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Felix Gerschau",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "compression": "^1.6.2",
+    "express": "^4.15.3",
+    "log4js": "^1.1.1",
+    "mongoose": "^4.11.1",
+    "serve-favicon": "^2.4.3",
+    "serve-static": "^1.12.3"
+  }
 }
