--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "compression": "^1.6.2",
     "csvtojson": "^1.1.7",
     "express": "^4.15.3",
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.3.2",
     "log4js": "^1.1.1",
     "mongoose": "^4.11.1",
+    "pug": "^2.0.0-rc.2",
     "serve-favicon": "^2.4.3",
     "serve-static": "^1.12.3"
   }
