--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.15.3",
     "gulp": "^3.9.1",
     "gulp-less": "^3.3.2",
+    "lodash": "^4.17.4",
     "log4js": "^1.1.1",
     "mongoose": "^4.11.1",
     "pug": "^2.0.0-rc.2",
